# mapi

./: README.rst  pyproject.toml
examples/: gitlab.py
mapi/: __init__.py  collector.py  core.py  db.py  hooks.py  http_client.py
tests/: doubles.py  test_mapi.py
