[tool.poetry]
name = "mapi"
version = "0.1.0"
description = ""
authors = ["Bot <bot@blipblop.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.1"
cchardet = "^2.1.7"
aiodns = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1"
ipython = "^8.4.0"
pytest-asyncio = "^0.18.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
